Dodanie użytkownika, logowania, migracji nr2, edycja pakietów

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
                                 <a class="dropdown-item" asp-area="" asp-page="/AddRecipe">Dodaj przepis</a>
                             </div>
                         </li>
+                        <partial name="_LoginPartial.cshtml" />
                     </ul>
                 </div>
             </div>
