--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,13 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.card-columns .card-img {
+    height: 330px;
+    width: 330px;
+    vertical-align: bottom;
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    opacity: .8;
+}
