--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model PrzepisyWeb.Pages.RecipiesModel
 @{
+    ViewData["Title"] = "Przepisy - ";
+}
 }
 
 <div class="card" style="width: 18rem;">
