--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -3,66 +3,46 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PrzepisyWeb</title>
+    <title>@ViewData["Title"] PrzepisyWeb </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon-16x16.png">
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 ml-1 mr-1">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Strona z przepisami</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Strona Główna</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Recipies">Przepisy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Recipies">Przepisy</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Konto
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item text-dark" asp-area="" asp-page="#">Mój profil</a>
-                                <a class="dropdown-item text-dark" asp-area="" asp-page="#">Ulubione</a>
-                                <a class="dropdown-item text-dark" asp-area="" asp-page="#">Moje Przepisy</a>
-                                <div class="dropdown-divider">  </div>
-                                <a class="dropdown-item" asp-area="" asp-page="/AddRecipe">Dodaj przepis</a>
-                            </div>
-                        </li>
-                        <partial name="_LoginPartial.cshtml" />
-                    </ul>
-
-                </div>
-                </div>
-            </nav>
+    <div id="wrapper">
+        <header>
+            <img src="chef-1417239_1280.png" alt="kucharze - header" />
         </header>
-        <div class="container">
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>
+        <nav>
+            <a class="menu" asp-area="" asp-page="/Index">Strona głowna</a>
+            <a class="menu" asp-area="" asp-page="/Recipies">Przepisy</a>
+            <a class="menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Moje Konto </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="menu" asp-area="" asp-page="#">Mój profil</a>
+                            <a class="menu" asp-area="" asp-page="#">Ulubione</a>
+                            <a class="menu" asp-area="" asp-page="#">Moje przepisy</a>
+                        </div>
+            <a class="menu" asp-area="" asp-page="/AddRecipe">Dodaj przepis</a>
+            <partial name="_LoginPartial.cshtml" />
+        </nav>
 
-        <footer class="border-top footer text-muted">
-            <div class="container">
-                &copy; 2021 - PrzepisyWeb - <a asp-area="" asp-page="/Privacy">Privacy</a>
-            </div>
-        </footer>
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
 
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
+    <footer>
+        &copy; 2021 - PrzepisyWeb - <a asp-area="" asp-page="/Privacy">Privacy</a>   
+    </footer>
 
-        @RenderSection("Scripts", required: false)
-    </body>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+
+    @RenderSection("Scripts", required: false)
+</body>
     </html>
