--- a/Pages/Identity/Pages/_ViewImports.cshtml
+++ b/Pages/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using PrzepisyWeb.Areas.Identity
-@using PrzepisyWeb.Areas.Identity.Pages
+@using PrzepisyWeb.Pages.Identity
+@using PrzepisyWeb.Pages.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using PrzepisyWeb.Areas.Identity.Data
+@using PrzepisyWeb.Models;
