--- a/Pages/AddRecipe.cshtml
+++ b/Pages/AddRecipe.cshtml
@@ -3,27 +3,27 @@
 @{
 
     <div>
-        <div class="d-flex p-2 justify-content-center">
-        <h3>Dodaj swój nowy przepis!</h3>
+        <div class="d-flex p-2 justify-content-center" sytle="margin: 10px 0 0 0">
+        <h2>Dodaj swój nowy przepis!</h2>
         </div>
         
         <form method="post">
             <div class="row m-1">
                 <div class="col">
-                    <label for="recipeTitle">Tytuł</label>
+                    <h5 for="recipeTitle">Tytuł</h5>
                     <input type="text" class="form-control" id="recipeTitle" />
                     <small id="titleHelpMeBlock" class="form-text text-muted">Tytuł może pomieścić maksymalnie 80 znaków!</small>
                 </div>
             </div>
             <div class="row m-1">
                 <div class="col">
-                    <label for="textForIngredients">Składniki</label>
+                    <h5 for="textForIngredients">Składniki</h5>
                     <textarea class="form-control" id="textForIngredients" rows="3" placeholder="Przykład - 200g mąki, 100ml mleka, ..."></textarea>
                 </div>
             </div>
             <div class="row m-1">
                 <div class="col">
-                    <label for="textForIngredients">Przepis</label>
+                    <h5 for="textForIngredients">Przepis</h5>
                     <textarea class="form-control" id="textForIngredients" rows="6" placeholder="Tutaj podaj swój przepis"></textarea>
                 </div>
             </div>
@@ -35,8 +35,8 @@
              </div>
             <div class="row m-2 pl-3">
                 <div class="col">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Dessert">
-                    <label class="form-check-label" for="Dessert">Deser</label>
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Breakfast">
+                    <label class="form-check-label" for="Breakfast">Śniadanie</label>
                 </div>
                 <div class="col">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Dinner">
@@ -44,35 +44,35 @@
                 </div>
                 <div class="col">
 
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Healthy">
-                    <label class="form-check-label" for="Healthy">Zdrowe</label>
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Supper">
+                    <label class="form-check-label" for="Supper">Kolacja</label>
                 </div>
                 <div class="col">
 
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Healthy">
-                    <label class="form-check-label" for="Healthy">Zdrowe</label>
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Dessert">
+                    <label class="form-check-label" for="Dessert">Deser</label>
                 </div>
             </div>
             <div class="row m-2 pl-3">
                 <div class="col">
 
-                    <input class="form-check-input" type="checkbox" id="4" value="option1">
-                    <label class="form-check-label" for="4">fgfg</label>
+                    <input class="form-check-input" type="checkbox" id="4" value="sweet">
+                    <label class="form-check-label" for="sweet">Na słodko</label>
                 </div>
                 <div class="col">
 
-                    <input class="form-check-input" type="checkbox" id="3" value="option1">
-                    <label class="form-check-label" for="3">gfg</label>
+                    <input class="form-check-input" type="checkbox" id="3" value="salty">
+                    <label class="form-check-label" for="salty">Na słono</label>
                 </div>
                 <div class="col">
 
-                    <input class="form-check-input" type="checkbox" id="2" value="option1">
-                    <label class="form-check-label" for="2">dfdfdf</label>
+                    <input class="form-check-input" type="checkbox" id="2" value="drinks">
+                    <label class="form-check-label" for="drinks">Napoje</label>
                 </div>
                 <div class="col">
 
-                    <input class="form-check-input" type="checkbox" id="2" value="option1">
-                    <label class="form-check-label" for="2">dfdfdf</label>
+                    <input class="form-check-input" type="checkbox" id="2" value="other">
+                    <label class="form-check-label" for="other">Inne</label>
                 </div>
             </div>
             
