--- a/Pages/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Pages/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Zapomniałeś hasła?";
 }
 
 <h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
+<h4>Wpisz swój email.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
