--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h4>Dziękujemy za skorzystanie z naszej strony ;)</h4>
