--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] PrzepisyWeb </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon-16x16.png">
+    <link rel="icon" href="~/my_img/favicon-16x16.png">
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/style.css" />
@@ -14,18 +14,18 @@
 <body>
     <div id="wrapper">
         <header>
-            <img src="chef-1417239_1280.png" alt="kucharze - header" />
+            <img src="~/my_img/chef-1417239_1280.png" alt="kucharze - header" />
         </header>
         <nav>
             <a class="menu" asp-area="" asp-page="/Index">Strona głowna</a>
+            <a class="menu" asp-area="" asp-page="/AddRecipe">Dodaj przepis</a>
             <a class="menu" asp-area="" asp-page="/Recipies">Przepisy</a>
             <a class="menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Moje Konto </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="menu" asp-area="" asp-page="#">Mój profil</a>
-                            <a class="menu" asp-area="" asp-page="#">Ulubione</a>
-                            <a class="menu" asp-area="" asp-page="#">Moje przepisy</a>
+                            <a class="menu" style="color: black" asp-area="" asp-page="#">Mój profil</a>
+                            <a class="menu" style="color: black" asp-area="" asp-page="#">Ulubione</a>
+                            <a class="menu" style="color: black" asp-area="" asp-page="#">Moje przepisy</a>
                         </div>
-            <a class="menu" asp-area="" asp-page="/AddRecipe">Dodaj przepis</a>
             <partial name="_LoginPartial.cshtml" />
         </nav>
 
