--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -22,8 +22,8 @@
         <!---<li class="nav-item">
             <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
         </li>-->
-        <li class="nav-item">
-            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <li>
+            <a class="menu" id="login" asp-area="Identity" asp-page="/Account/Login">Zaloguj się</a>
         </li>
     }
 </ul>
