--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -20,14 +20,16 @@ header img {
     display: block;
     background-color: #282424;
 }
-nav{
+nav {
     background-color: #6666FF;
+    display: flex;
+    justify-content: space-between;
+    white-space: nowrap;
 }
 
 a.menu{
     display: inline-block;
     font-size: 20px;
-    width: 24.67%;
     padding: 15px 30px 15px 30px;
     color: white;
     text-decoration: none;
@@ -84,6 +86,13 @@ h4 {
     font-size: 25px;
     padding: 30px 10px 0 10px;
 }
+h5 {
+    background-color: #FFFFFF;
+    line-height: inherit;
+    font-size: 25px;
+    padding: 30px 10px 0 10px;
+    margin: 0 0 3px 0;
+}
 
 .inherit{
     float: inherit;
@@ -100,6 +109,13 @@ h4 {
 article p {
     text-align: center;
     font-size: 18px;
+    padding: 15px 15px 0 15px;
+}
+
+card_p{
+    text-align: center;
+    font-size: 18px;
+    width: 25%;
     padding: 15px 15px 0 15px;
 }
 
