--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -60,9 +60,9 @@
                     </td>
                     <td>
                         <form method="post">
-                        <input type="submit" name="Like" value="Like" asp-for="@item" />
+                        <input type="submit" name="Like" value="Like" asp-for="LikedRecipe = @item.RecipeID" />
                        </form>
-                            <a type="text/asp" asp-action="Like" asp-route-id="@item.RecipeID">Like</a>
+                        <a type="text/asp" asp-action="Like" asp-route-id="LikedRecipe">Like</a>
                         <button  asp-action="Like" asp-route-id="@item.RecipeID">Dislike</button>
                         <a asp-page="./Edit" asp-route-id="@item.RecipeID">Edit</a> |
                         <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
