Dodawanie przepisów trzeba dokończyć, bo w połowie na razie zrobione. Kategorie omówić, bo wciąż nie jestem przekonany co do oddzielnej strony. Dodać dane personalne.

--- a/Pages/Categories/Index.cshtml
+++ b/Pages/Categories/Index.cshtml
@@ -6,20 +6,13 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-
+<div class="d-flex p-2 justify-content-center" style="margin: 10px 0 0 0">
+    <h2>Kategorie!</h2>
+</div>
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Dodaj nową kategorię!</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Category[0].categoryName)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
     <tbody>
 @foreach (var item in Model.Category) {
         <tr>
@@ -27,9 +20,8 @@
                 @Html.DisplayFor(modelItem => item.categoryName)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.categoryID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.categoryID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.categoryID">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.categoryID">Edytuj</a> |
+                <a asp-page="./Delete" asp-route-id="@item.categoryID">Usuń</a>
             </td>
         </tr>
 }
