--- a/Pages/AddRecipe.cshtml
+++ b/Pages/AddRecipe.cshtml
@@ -3,10 +3,10 @@
 @{
 
     <div>
-        <div class="d-flex p-2 justify-content-center" sytle="margin: 10px 0 0 0">
-        <h2>Dodaj swój nowy przepis!</h2>
+        <div class="d-flex p-2 justify-content-center" style="margin: 10px 0 0 0">
+            <h2>Dodaj swój nowy przepis!</h2>
         </div>
-        
+
         <form method="post">
             <div class="row m-1">
                 <div class="col">
@@ -31,8 +31,7 @@
                 <div class="col">
                     <h5>Kategorie</h5>
                 </div>
-               
-             </div>
+            </div>
             <div class="row m-2 pl-3">
                 <div class="col">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Breakfast">
@@ -75,10 +74,9 @@
                     <label class="form-check-label" for="other">Inne</label>
                 </div>
             </div>
-            
-            
         </form>
-      
-
     </div>
+    <form method="post">
+        <div style="text-align:center"><input type="submit" value="Dodaj przepis!" /></div>
+    </form>
 }
