--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PrzepisyWeb.Pages.Recipies
+@model PrzepisyWeb.Pages.RecipiesModel
 @{
     ViewData["Title"] = "Przepisy - ";
 }
@@ -64,9 +64,9 @@
                        </form>
                         <a type="text/asp" asp-action="Like" asp-route-id="LikedRecipe">Like</a>
                         <button  asp-action="Like" asp-route-id="@item.RecipeID">Dislike</button>
-                        <a asp-page="./Edit" asp-route-id="@item.RecipeID">Edit</a> |
-                        <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
-                        <a asp-page="./Delete" asp-route-id="@item.RecipeID">Delete</a>
+                        <a asp-page="/Recipes/Edit" asp-route-id="@item.RecipeID">Edit</a> |
+                        <a asp-page="/Recipes/Details" asp-route-id="@item.RecipeID">Details</a> |
+                        <a asp-page="/Recipes/Delete" asp-route-id="@item.RecipeID">Delete</a>
                     </td>
                 </tr>
             }
