Like/Dislike znowu działa, poprawiono RecipeModel

--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -75,7 +75,7 @@
 
                     <a asp-page="/Recipes/Edit" asp-route-id="@item.RecipeID">Edit</a> |
                     <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.RecipeID">Delete</a>
+                    <a asp-page="/Recipes/Delete" asp-route-id="@item.RecipeID">Delete</a>
                 </td>
             </tr>
         }
