Ogarnianie funkcjonalności ulubionych (prawie skończone)

--- a/Pages/Recipes/Favourite.cshtml
+++ b/Pages/Recipes/Favourite.cshtml
@@ -6,11 +6,8 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Favourite</h1>
+<h1>Twoje ulubione przepisy</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -51,9 +48,8 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.RecipeID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.RecipeID">Delete</a>
+                <a asp-page="./DeleteFavourite" asp-route-id="@item.RecipeID">Usuń z ulubionych</a> 
+               
             </td>
         </tr>
 }
