--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -62,13 +62,13 @@
                     <form method="post">
 
                         <input type="hidden" name="Like" asp-for="@item.RecipeID" />
-                        <input type="submit" name="Like" value="Like" />
+                        <input type="submit" name="Like" value="Like" /> 
                     </form>
-
+                    @Html.DisplayFor(modelItem => item.LikeCounter) 
                     <form method="post">
 
                         <input type="hidden" name="Like" asp-for="@item.RecipeID" />
-                        <input type="submit" name="Dislike" value="Dislike" />
+                        <input type="submit" name="Dislike" value="Dislike" /> 
                     </form>
 
                     <a asp-page="/Recipes/AddFavourite" asp-route-id="@item.RecipeID">Do ulubionych</a> |
