Ale będzie jazda

--- a/Pages/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Pages/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Zapomniałeś hasła?";
+    ViewData["Title"] = "Zapomnienie hasła - ";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 style="padding: 20px 0 0 0">Zapomniałeś hasła?</h1>
 <h4>Wpisz swój email.</h4>
-<hr />
+<hr color="red" />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
@@ -16,7 +16,7 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Zatwierdź</button>
         </form>
     </div>
 </div>
