--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -18,9 +18,9 @@
             <img src="~/my_img/chef-1417239_1280.png" alt="kucharze - header" />
         </header>
         <nav>
-            <a class="menu" asp-area="" asp-page="/Index">Strona głowna</a>
-            <a class="menu" asp-area="" asp-page="/AddRecipe">Dodaj przepis</a>
-            <a class="menu" asp-area="" asp-page="/Recipies">Przepisy</a>
+            <a class="menu" asp-page="/Index">Strona głowna</a>
+            <a class="menu" asp-page="/AddRecipe">Dodaj przepis</a>
+            <a class="menu" asp-page="/Recipies">Przepisy</a>
             <a class="menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Moje Konto </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="menu" style="color: black" asp-area="" asp-page="#">Mój profil</a>
@@ -28,7 +28,6 @@
                             <a class="menu" style="color: black" asp-area="" asp-page="#">Moje przepisy</a>
                         </div>
             <partial name="_LoginPartial.cshtml" />
-
         </nav>
 
     <div class="container">
