--- a/Pages/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Pages/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = "Potwierdzenie emaila -";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 style="padding: 20px 0 0 0">Email potwierdzony</h1>
