--- a/Pages/Identity/Pages/Account/Logout.cshtml
+++ b/Pages/Identity/Pages/Account/Logout.cshtml
@@ -5,6 +5,5 @@
 }
 
 <header>
-    <h1>Wyloguj się</h1>
-    <p>Zostałeś pomyślnie wylogowany ze strony.</p>
+    <h3 style="padding: 40px 0 0 0">Zostałeś pomyślnie wylogowany ze strony.</h3>
 </header>
