--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -74,7 +74,7 @@
 
 
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="card_p; margin: 0 0 15px 0">
     <img class="card-img-top" src="https://www.telepolis.pl/images/2021/02/pale-moon-browser-29.jpg" alt="Card image cap">
     <div class="card-body">
         <!---<h5 class="card-title">Card title</h5>-->
