--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -5,25 +5,20 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<ul class="navbar-nav">
+<nav>
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-        </li>
-        <li class="nav-item">
-            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+     
+      <a class="menu" id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        <a>
+            <form id="logoutForm" class="form" asp-page="/Identity/Pages/Account/Logout" asp-route-returnUrl="@Url.Page("/Layout", new { area = "" })">
+               <button id="logout" type="submit" class="nav-link btn btn-outline-light" style="height: 59px">Wyloguj się</button>
             </form>
-        </li>
+        </a>
     }
-    else
-    {
-        <!---<li class="nav-item">
-            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-        </li>-->
-        <li>
-            <a class="menu" id="login" asp-area="Identity" asp-page="/Account/Login">Zaloguj się</a>
-        </li>
-    }
-</ul>
+ else
+{
+     
+         <a class="menu" id="login" asp-page="/Identity/Pages/Account/Login">Zaloguj się</a>
+}
+</nav>
