--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -60,13 +60,23 @@
                     </td>
                     <td>
                         <form method="post">
-                        <input type="submit" name="Like" value="Like" asp-for="LikedRecipe = @item.RecipeID" />
-                       </form>
+                            <input type="submit" name="Like" value="Like" asp-for="LikedRecipe = @item.RecipeID" />
+                        </form>
                         <a type="text/asp" asp-action="Like" asp-route-id="LikedRecipe">Like</a>
-                        <button  asp-action="Like" asp-route-id="@item.RecipeID">Dislike</button>
+                        <button asp-action="Like" asp-route-id="@item.RecipeID">Dislike</button>
                         <a asp-page="/Recipes/Edit" asp-route-id="@item.RecipeID">Edit</a> |
                         <a asp-page="/Recipes/Details" asp-route-id="@item.RecipeID">Details</a> |
                         <a asp-page="/Recipes/Delete" asp-route-id="@item.RecipeID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+        <tbody>
+            @foreach (var item in Model.CategoriesList)
+            {
+                <tr>
+                    <td>
+                        <input id="CheckBox2" type="checkbox" name="CheckBox2" /><label for="CheckBox2"> @Html.DisplayFor(modelItem => item.categoryName)</label>
                     </td>
                 </tr>
             }
