Dodanie backu do indexu (top 10) i orderby po dacie w wyszukiwaniu

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -17,3 +17,10 @@
 
     </article>
 </section>
+<section>
+    <article>
+        <h3>Oto TOP 10 przepisów według naszych urzytkowników</h3>
+        
+        <!-- Miejsce na karty-->
+    </article>
+</section>
