Strona z przepisami dla konkretnego użytkownika ZROBIONA, połączenie kilku linków w layout

--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -62,7 +62,7 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OwnerUserName)
+                <a asp-page="/Recipes/UserPage" asp-route-UserName="@item.OwnerUserName">@Html.DisplayFor(modelItem => item.OwnerUserName)</a> 
             </td>
             <td>
                 <form method="post">
