--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,10 +23,11 @@
             <a class="menu" asp-area="" asp-page="/Recipies">Przepisy</a>
             <a class="menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Moje Konto </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="menu" style="color: black" asp-area="" asp-page="/Identity/Account/Manage">Mój profil</a>
+                            <a class="menu" id="manage" style="color: black"  asp-area="Identity" asp-page="/Account/Manage/Index">Mój profil</a>
                             <a class="menu" style="color: black" asp-area="" asp-page="/Recipes/Favourite">Ulubione</a>
-                            <a class="menu" style="color: black" asp-area="" asp-page="">Moje przepisy</a>
+                            <a class="menu" style="color: black" asp-area="" asp-page="/Recipes/MyRecipes">Moje przepisy</a>
                         </div>
+
             <partial name="_LoginPartial.cshtml" />
 
         </nav>
