--- a/Pages/Recipes/UserPage.cshtml
+++ b/Pages/Recipes/UserPage.cshtml
@@ -8,10 +8,10 @@
 
 <h1>Przepisy użytkownika</h1>
 
-<3>
+<h3>
     
-    nazwa użytkownika
-</3>
+    @Html.DisplayFor(model => model.UsernameDisplay)
+</h3>
 <table class="table">
     <thead>
         <tr>
