--- a/Pages/Recipes/Create.cshtml
+++ b/Pages/Recipes/Create.cshtml
@@ -37,9 +37,9 @@
             <div>
                 Kategorie<br />
 
-                @foreach (var item in Model.CategoriesList)
+                @for (var i = 0; i < Model.CategoriesList.Count() ; i++)
                 {
-                    <input id="CheckBox1" type="checkbox" name="CheckBox1" /><label for="CheckBox1">@Html.DisplayFor(modelItem => item.categoryName)</label>
+                    <input name="@Model.CategoriesList[i].categoryName" type="checkbox" id="@Model.CategoriesList[i].categoryID" />@Model.CategoriesList[i].categoryName<br />
                 }
             </div>
             <div class="form-group">
